syntax="proto3";

package com.service;
option java_multiple_files = true;
option java_outer_classname = "TestMiddlewarec";
option go_package = "/pb";
service TestMiddleware {
    rpc Ping(PingRequest) returns (PingResponse);
 
}

message PingRequest {
    string message = 1;
}
message PingResponse {
    string message = 1;
}


